# house_of_atmos

./: .gitignore  CMakeLists.txt  README.md  house_of_atmos.html  house_of_atmos.iss  toolchain-default.cmake  toolchain-web.cmake  toolchain-windows.cmake  valgrind-out.txt  web-shell.html  windows-toolchain.cmake
art/: boat.aseprite  buildings.aseprite  carriage.aseprite  cloth_works.blend  cloth_works.blend1  commissary_works.blend  commissary_works.blend1  crude_oil_resource.blend  depot.blend  depot.blend1  factory.blend  factory.blend1  farmland.blend  farmland.blend1  foliage.aseprite  grass.blend  ground.aseprite  horse.blend  horse.blend1  house.blend  house.blend1  human.blend  human.blend1  interior.aseprite  juicyfruit-16.ase  juicyfruit-16.gpl  mansion.blend1  mansion_interior.blend  mansion_interior.blend1  manufacturing_works.blend  metal_bridge.blend  metal_bridge.blend1  metallurgical_works.blend  metallurgical_works.blend1  mineshaft.blend  mineshaft.blend1  na16-ext.gpl  na16.ase  na16.gpl  ore_resource.blend  (+33 more)
art/foliage/: birch.blend  birch.blend1  birch_sapling.blend  birch_sapling.blend1  fern.blend  fern.blend1  flowers_blue.blend  flowers_blue.blend1  flowers_red.blend  flowers_red.blend1  flowers_yellow.blend  flowers_yellow.blend1  foliage.aseprite  grass.blend  mushroom.blend  pine.blend  pine_sapling.blend  pine_sapling.blend1  rocks.blend
art/trains/: basic_locomotive.blend  basic_locomotive.blend1  semaphore.blend  semaphore.blend1  small_locomotive.blend  small_locomotive.blend1  track_curve.blend  track_curve.blend1  track_curve_45_1.blend1  track_diagonal.blend  track_diagonal.blend1  track_incline.blend  track_incline.blend1  track_incline_bottom.blend  track_incline_bottom.blend1  track_incline_top.blend  track_incline_top.blend1  track_straight.blend  track_straight.blend1  track_straight_ballastless.blend  track_straight_ballastless.blend1  train_car_modern.blend  train_car_modern.blend1  train_car_old.blend  train_car_old.blend1  trains.aseprite  tram.blend  tram.blend1  tram_car.blend  tram_car.blend1  tram_locomotive.blend  tram_locomotive.blend1
include/engine/: animation.hpp  arena.hpp  audio.hpp  input.hpp  localization.hpp  logging.hpp  math.hpp  model.hpp  nums.hpp  rendering.hpp  resources.hpp  rng.hpp  scene.hpp  ui.hpp  util.hpp  window.hpp
include/glad/: gl.h  gles2.h
include/stb/: stb_vorbis.h
libsrc/glad/: gl.cpp  glad.c
libsrc/stb/: stb_image.cpp  stb_vorbis.cpp
libsrc/syoyo/: tinygltf.cpp
res/: farmland.gltf  house.gltf  localization.json  mineshaft.gltf  model_frag.glsl  model_vert.glsl  player.gltf  ramen.blend  ramen.blend1  ramen.mtl  test.gltf  test_frag.glsl  test_vert.glsl
res/bridges/: metal_bridge.glb  stone_bridge.glb  wooden_bridge.glb
res/buildings/: cloth_works.glb  commissary_works.glb  depot.glb  factory.glb  factory.gltf  farmland.glb  farmland.gltf  house.glb  house.gltf  manufacturing_works.glb  metallurgical_works.glb  (+10 more)
src/: audio_const.cpp  audio_const.hpp  balance.hpp  camera.cpp  camera.hpp  character.hpp  collider.hpp  cutscene.hpp  dialogue.cpp  dialogue.hpp  human.hpp  interactable.cpp  interactable.hpp  light.hpp  main.cpp  particle_const.hpp  particles.hpp  pause_menu.cpp  pause_menu.hpp  player.cpp  player.hpp  renderer.cpp  renderer.hpp  save_info.hpp  settings.cpp  settings.hpp  sound.cpp  sound.hpp  terrain.cpp  terrain.hpp  toasts.hpp  ui_background.hpp  ui_const.cpp  ui_const.hpp  ui_font.cpp  ui_font.hpp  ui_icon.hpp  ui_util.cpp  ui_util.hpp
(+184 files in other folders)
